[package]
name = "trusted-api"
version = "1.0.0"
authors = ["Fanghao Yang"]
edition = "2021"

[dependencies]
http_req = { version = "0.8", default-features = false, features = [
    "rust-tls",
] }
jsonwebtoken = { git = "https://github.com/yangfh2004/jsonwebtoken.git" }
rand = "0.8.5"
hex = "0.4.0"
topk8 = "0.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
